force-app/main/default/objects/KimbleOne__TimeCategoryTemplate__c/KimbleOne__TimeCategoryTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Time Category Template</label>
    <nameField>
        <label>Time Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Category Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>