force-app/main/default/objects/KimbleOne__TimeCategoryTemplate__c/fields/KimbleOne__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplayType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Display Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>DisplayType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Time Category Templates</relationshipLabel>
    <relationshipName>TimeCategoryTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>