force-app/main/default/objects/KimbleOne__TimeCategoryTemplate__c/fields/KimbleOne__ResourcedActivityTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityTemplate__c</fullName>
    <label>Resourced Activity Template</label>
    <referenceTo>KimbleOne__ResourcedActivityTemplate__c</referenceTo>
    <relationshipLabel>Time Category Templates</relationshipLabel>
    <relationshipName>TimeCategoryTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>