force-app/main/default/objects/KimbleOne__TimeCategoryTemplate__c/fields/KimbleOne__TimeCategoryValues__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeCategoryValues__c</fullName>
    <label>Time Category Values</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>